--- a/atlantis.html
+++ b/atlantis.html
@@ -31,14 +31,13 @@
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
-  	<div class="page-title">ATLANTIS HUB</div>
+  	<div class="page-title">Atlantis Hub</div>
   	<div class="project-info">
   		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
   	</div>
-  	
+  	<img src="pics/atlantis/atlantisyellow.jpg" class="big-pic">
   	<div id="atlantis" class="margin-medium">
 	  	<div class="content">
-	  	<img src="pics/atlantis/atlantisyellow.jpg" class="big-pic">
 			<div class="context-summary">
 				<div class="context-title">Context</div>
 				Given a spreadsheet of unorganized raw data and personas of users and stakeholders, we were tasked with designing an environmental display featuring information about planes, trains, and ferries. The project followed an iterative design process that was centered around analyzing stakeholder and user needs. 
@@ -61,24 +60,22 @@
 					Adobe Photoshop, Keynote
 					</div>
 			</div>
-			
 	  	</div>
 
-	  	<div class="section-title">PROCESS</div>
-	  	<div class="process-overview">
-
+	  
+	  	<div class="process-overview" style="display:inline-block">
 			<div class="process-title">Data Modeling</div>
 			<div class="panel">
 			  <div class="text-small">
 			  	The first step was exploring and structuring the data (shown) in class. After I had a feel for the attributes I would be working with and their values, I actually began modeling out the data and picking through what was important and what wasn’t.
 			  </div>
-			  <img class="product-pic-medium-right" src="pics/atlantis/data.png">
+			  <img class="product-pic-medium-right" src="pics/atlantis/data.png" style="box-shadow: 1px 1px 10px #BABABA;">
 			  <div class="text-small" style="width: 100%">
 			  	For example, "Destination" is a pretty important attribute, while "Maximum Takeoff Weight" is probably less relevant to the users. After determining what data was valuable and what was not, I began modeling that data out on paper, sketching out groupings of information.
 			  	<p>Once I got a feel for the data I would be working with, I was introduced to my users and stakeholders. I summarized their needs and mapped specific data and ways to display data to the individuals with whom will be using this display.</p>
 			  </div>
-			  <img class="product-pic-medium" src="pics/atlantis/data2.jpg">
-			  <img class="product-pic-medium" src="pics/atlantis/data3.jpg">
+			  <img class="product-pic-medium" src="pics/atlantis/data2.jpg" style="box-shadow: 1px 1px 10px #BABABA;">
+			  <img class="product-pic-medium" src="pics/atlantis/data3.jpg" style="box-shadow: 1px 1px 10px #BABABA;">
 			</div>
 
 			<div class="process-title">Wireframing</div>
@@ -149,8 +146,8 @@
 				<p>4) Icons are used for easy identification of transport methods.</p>
 			  </div>
 			</div>
-		  	<a href="newstagram.html" class="next-project" style="background-color: #FEE469; float: right; color: black"> 
-		  		NEWSTAGRAM >
+		  	<a href="l&d.html" class="next-project" style="background-color: #FEE469; float: right; color: black"> 
+		  		L&D PORTAL >
 		  	</a>
 
 		  	<a href="miles.html" class="next-project" style="background-color: #FEE469; float: left; color: black"> 
