--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
 
       <div id="projects" class="margin-small">
 
+        <a href="l&d.html" class="project section">
+          <img src="pics/l&d.jpg" class="project-pic" style="opacity:1">
+          <div class="captions">
+          <div class="project-title-mobile">L&D Portal</div>
+          A portal for Deloitte Digital practitioners to request continuing educational opportunities.</div>
+          <div class="overlay" id="green">
+            <div class="overlay-text">
+            <div class="project-title">L&D Portal</div>
+            A portal for Deloitte Digital practitioners to request continuing educational opportunities.</div>
+          </div>
+        </a>
+
         <a href="newstagram.html" class="project section">
           <img src="pics/newig.png" class="project-pic" style="opacity:1">
           <div class="captions">
