--- a/l&d.html
+++ b/l&d.html
@@ -33,13 +33,12 @@
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
-	  	<div class="page-title">LEARNING & DEVELOPMENT PORTAL</div>
-	  	<div id="ld" class="margin-medium">
+	  	<div class="page-title">Learning & Development Portal</div>
 	  	<div class="project-info">
 	  		Summer 2018 | Deloitte Digital Summer Internship
 	  	</div>
-
-	  	<img src="pics/newstagram/streamspurple.jpg" class="big-pic">
+	  	<img src="pics/l&d/requests.jpg" class="big-pic">
+	  	<div id="ld" class="margin-medium">
 
 	  	<div class="content">
 			<div class="context-summary">
@@ -66,12 +65,11 @@
 	  	</div>
 
 	  	<div id="secondary-pics">
-	  		<img class="pics-3" src="pics/newstagram/explore1.png">
-			<img class="pics-3" src="pics/newstagram/explore2.png">
-			<img class="pics-3" src="pics/newstagram/explore3.png">
+			<img class="pics-2" src="pics/l&d/faq.jpg">
+			<img class="pics-2" src="pics/l&d/expenses.jpg">
 		</div>
 
-	  	<div class="section-title">PROCESS</div>
+	  	<div class="process-title">Process</div>
 	  	<div class="panel">I followed the classic double-diamond process for this 6-week project, splitting each phase into roughly a two-week sprint. In the 'Discover' phase, I did a Heuristic Evaluation of the existing portal and conducted 20 interviews and 2 usability tests with users and stakeholders. In 'Define,' I worked with a team to create an Affinity Map from nearly 400 statements gathered from research. We also completed a product visioning session, and I created personas and prioritized user stories. I kicked off 'Develop' with a Crazy 8s session, and eventually worked through several iterations of wireframes and prototypes. In 'Deploy,' I interviewed the developer who will be taking this project forward, created a style guide, and began to work through visual designs for screens.</div>
 
 		<div class="process-title">Heuristic Evaluation</div>
@@ -79,15 +77,13 @@
 			<img src="pics/l&d/heuristic2.jpeg" class="med-pic">
 		 	 <div class="inner-text">
 		  	My first step in understanding the existing portal (and ripping it to shreds) was to evaluate it based on <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">Nielsen's ten heuristics for usability</a>. Going through this process helped me pick apart major issues with the site and allowed me to familiarize myself with its features so I was better prepared going into interviews. 
-		  	<p>I started by printing out all the pages I want to evaluate and circling features or functionality that seemed flawed. I then went back through and categorized each flaw. View the full report <a href="">here</a>.</p>
+		  	<p>I started by printing out all the pages I want to evaluate and circling features or functionality that seemed flawed. I then went back through and categorized each flaw. View the full report <a href="pics/l&d/heuristiceval.pdf">here</a>.</p>
 		  	</div>
 		</div>
 
 		<div class="process-title last">Interviews</div>
 		<div class="panel">
-		<p>
-		Before speaking to anyone, I determined <a href="">who</a> I needed to talk to in order to cover all potential user and stakeholder groups and created a <a href="">script</a>. I divided the specific questions into general categories - Continuing Education, Approval Process, and Existing Portal. I knew it was important not to constrain myself by rigorously following a list of questions during interviews, so I used them as a starting off point and allowed the interviews to feel more like conversations. 
-		<p>
+		Before speaking to anyone, I determined who I needed to talk to in order to cover all potential user and stakeholder groups and created a <a href="pics/l&d/interview-script.pdf">script</a>. I divided the specific questions into general categories - Continuing Education, Approval Process, and Existing Portal. I knew it was important not to constrain myself by rigorously following a list of questions during interviews, so I used them as a starting off point and allowed the interviews to feel more like conversations. 
 		Throughout one week, I interviewed 20 individuals: 9 requesters, 5 approvers, 3 administrators, 2 developers, and 1 talent representative.
 		<p>
 		These were some insightful quotes from interviews:
@@ -100,13 +96,13 @@
 
 		<div class="process-title">Initial Usability Testing</div>
 		<div class="panel">
-		I didn't want to spend too much time testing the existing system because I anticipated completely starting from scratch, so I only did usability testing with two people. I also created a <a href="">script</a> in preparation, and what I observed helped me gain a better understanding of some of the pain points. Below are screens from the original site that users were navigating.
+		I didn't want to spend too much time testing the existing system because I anticipated completely starting from scratch, so I only did usability testing with two people. I also created a <a href="pics/l&d/usability-script.pdf">script</a> in preparation, and what I observed helped me gain a better understanding of some of the pain points. Below are screens from the original site that users were navigating.
 	  	<div id="secondary-pics">
-	  		<img class="pics-2" src="pics/l&d/map1.jpeg">
-			<img class="pics-2" src="pics/l&d/map1.jpeg">
+	  		<img class="pics-2" src="pics/l&d/initial-landing.png" style="box-shadow: 1px 1px 10px #BABABA;">
+			<img class="pics-2" src="pics/l&d/initial-admin.png" style="box-shadow: 1px 1px 10px #BABABA;">
 		</div>
 		<p>
-		After each session, I had a user fill out the <a href="">System Usability Scale</a> to benchmark the current system so I could go back and compare my later results. The score for the requester portal was __X__, and the score for the admin portal was __X__.
+		The first picture is the landing page, which has several separate tables below the visible one and lots of redundant information. The second screen is the "Admin Dashboard," essentially a table of all the metadata collected through the portal through the request process. 
 		</p>
 		</div>
 
@@ -123,7 +119,7 @@
 			<li><b>Accessibility</b> is vital for a growing user base</li>
 			</p>
 			<p>
-			Read on for an overview of the process that allowed us to pull those insights from the research or <a href="">download the full report here.</a>
+			Read on for an overview of the process that allowed us to pull those insights from the research or <a href="pics/l&d/affinity.pdf">download the full report here.</a>
 			</p>
 			  <img src="pics/l&d/map1.jpeg" class="med-pic">
 			  <div class="inner-text">
@@ -149,7 +145,7 @@
 		<div class="panel">
 			From the numerous interview subjects, four categories stuck out: Requesters, Approvers, Administrators, and Leadership. Each has a distinct role and goals:
 			<p>
-			<b>Alex | Requester | UX Designer at Deloitte Digital | <a href="">Full Profile</a></b>
+			<b>Alex | Requester | UX Designer at Deloitte Digital | <a href="pics/l&d/Alex.pdf">Full Profile</a></b>
 			<p>"I want to make the most of my continuing education opportunities, but I don't know how to start"</p>
 			<p>
 				Goal: Alex wants to sharpen her skills through continuing education opportunities to remain competitive in the market and contribute meaningfully to her project at work.
@@ -157,7 +153,7 @@
 			</p>
 			
 			<p>
-			<b>Kevin | Approver | Engineering Manager at Deloitte Digital | <a href="">Full Profile</a></b>
+			<b>Kevin | Approver | Engineering Manager at Deloitte Digital | <a href="pics/l&d/Kevin.pdf">Full Profile</a></b>
 			<p>"I usually know what's best for my counselees, but sometimes I need help making that call"</p>
 			</p>
 			<p>
@@ -165,12 +161,12 @@
 			</p>
 
 			<p>
-			<b>Andrew | Administrator | Learning & Development Lead at Deloitte Digital | <a href="">Full Profile</a></b>
+			<b>Andrew | Administrator | Learning & Development Lead at Deloitte Digital | <a href="pics/l&d/Drew.pdf">Full Profile</a></b>
 			<p>"I care about what's best for the studio, but I struggle to do that without analytics tools"</p>
 			<p>Goal: Drew wants to keep the studio on track in terms of both budget and learning.</p>
 			</p>
 
-			<b>Karen | Leadership | Service Line Lead at Deloitte Digital | <a href="">Full Profile</a></b>
+			<b>Karen | Leadership | Service Line Lead at Deloitte Digital | <a href="pics/l&d/Karen.pdf">Full Profile</a></b>
 			<p>"I want every practitioner to have an equal opportunity to learn and grow"</p>
 			<p>
 				Goal: Karen wants practitioners to strengthen their skills through continuing education opportunities so that the studio maintains its eminence.
@@ -191,7 +187,7 @@
 					The goal of the session was to brainstorm and prioritize requirements for delivering on the product vision, and to establish a cohesive vision that aligns with user needs and business goals.
 					</p>
 					<p>
-					I led the session, and several stakeholders, including all of the administrators and the head of the Deloitte Digital studio, were in attendance. I followed the <a href="http://www.romanpichler.com/tools/vision-board"> Product Vision Board</a> framework. View the completed board <a href="">here.</a>
+					I led the session, and several stakeholders, including all of the administrators and the head of the Deloitte Digital studio, were in attendance. I followed the <a href="http://www.romanpichler.com/tools/vision-board"> Product Vision Board</a> framework. View the completed board <a href="pics/l&d/product-visioning.pdf">here.</a>
 					</p>
 				</div>
 				
@@ -207,7 +203,7 @@
 
 		<div class="process-title">User Stories</div>
 		<div class="panel">
-		  <img src="pics/l&d/map2.jpeg" class="med-pic">
+		  <img src="pics/l&d/user-stor.png" class="med-pic" style="box-shadow: 1px 1px 10px #BABABA;">
 		  <div class="inner-text">
 		  	The next logical step was to create prioritized user stories for each user group. View the full document <a href="">here.</a>  
 		  	<p>Creating these user stories helped me flesh out the specific features that we identified through product visioning, identify which features belonged on which page, and draw the line between MVP features and nice-to-haves.</p>
@@ -217,14 +213,15 @@
 		<div class="process-title last">Business Process Modeling</div>
 		<div class="panel">
 		The current approval process is a one-size-fits all process that is in no way tailored to the request or user. So, an essential piece of this portal redesign was also redesigning the underlying process behind the portal. I started by breaking up the process into two user groups, by practitioner level: Analysts - Senior Consultants, and Managers and above. At the Manager level, it is likely that your counselor is an administrator, which creates redundancies. 
-		<p>The second big divide that needed to be addressed was cost - inexpensive requests like a $10 online course should not have to go through several levels of approval, rather, they can be auto-approved if the practitioner is below a certain threshold. I took these issues, as well as several other factors, when creating the flow below.</p>
-		<img src="pics/newstagram/streamspurple.jpg" class="big-pic">
+		<p>The second big divide that needed to be addressed was cost - inexpensive requests like a $10 online course should not have to go through several levels of approval, rather, they can be auto-approved if the practitioner is below a certain threshold. I took these issues, as well as several other factors, when creating the flows below.</p>
+		<img src="pics/l&d/bpm1.jpg" class="big-pic" style="box-shadow: 1px 1px 10px #BABABA;">
+		<img src="pics/l&d/bpm2.jpg" class="big-pic" style="box-shadow: 1px 1px 10px #BABABA;">
 		</div>
 
 		<div class="process-title">Wireframes</div>
 		<div class="panel">
 
-		  <img src="pics/l&d/crazy8.jpg" class="med-pic">
+		  <img src="pics/l&d/crazy8.jpg" class="med-pic" style="box-shadow: 1px 1px 10px #BABABA;">
 		  <div class="inner-text">
 			There are three separate levels of unique screens. Shown is my initial brainstorm for the requester landing page.
 			<p>Requester:</p>
@@ -242,10 +239,9 @@
 		  </div>
 
 		  	<div id="secondary-pics">
-		  		<p>Download the full PDF with every screen <a href="">here,</a> which contains detailed reasoning behind every design decision, backed up by research findings and/or best practices.</p>
-		  		<img class="pics-3" src="pics/newstagram/explore1.png">
-				<img class="pics-3" src="pics/newstagram/explore2.png">
-				<img class="pics-3" src="pics/newstagram/explore3.png">
+		  		<img class="pics-3" src="pics/l&d/wire-landing.jpg" style="box-shadow: 1px 1px 10px #BABABA; vertical-align: top">
+				<img class="pics-3" src="pics/l&d/wire-faq.jpg" style="box-shadow: 1px 1px 10px #BABABA; vertical-align: top">
+				<img class="pics-3" src="pics/l&d/wire-expenses.jpg" style="box-shadow: 1px 1px 10px #BABABA; vertical-align: top">
 			</div>
 		</div>
 
@@ -254,16 +250,21 @@
 		<div class="panel">
 		</div>
 
+		<div class="last">
 		<div class="process-title">Visual Design</div>
-		TBD
 		<div class="panel">
+			<img src="pics/l&d/style-guide.jpg" class="med-pic" style="box-shadow: 1px 1px 10px #BABABA;">
+			<div class="inner-text">
+			After incorporating feedback from usability testing, I moved on to visual design. I had to use Deloitte Digital branding, so I created a simplified style guide based on the lengthy existing style guide. I only had a few days for visual, so I only completed the requester screens, but I worked through several iterations and had a senior designer review my work. View all the requester screens <a href="pics/l&d/requester.pdf">here</a> and all the approver screens <a href="pics/l&d/approver.pdf">here</a>! 
+			</div>
+		</div>
 		</div>
 
-		  	<a href="chutzpow.html" class="next-project" style="background-color: #662C92; float: right"> 
+		  	<a href="newstagram.html" class="next-project" style="background-color: #49ce5c; float: right"> 
 		  		NEWSTAGRAM >
 		  	</a>
 
-		  	<a href="atlantis.html" class="next-project" style="background-color: #662C92; float: left"> 
+		  	<a href="atlantis.html" class="next-project" style="background-color: #49ce5c; float: left"> 
 		  		< ATLANTIS HUB
 		  	</a>
 	  	</div>
