--- a/miles.html
+++ b/miles.html
@@ -56,9 +56,10 @@
 			</div>
 	  	</div>
 
-	  	<div class="section-title">PROCESS</div>
+
 	  	<div class="process-overview">
-			
+
+	  		<div class="last">
 			<div class="process-title">User Stories</div>
 			<div class="panel">
 			  As a first step, we created user stories. This helped us focus in on our audience and narrow our vision for the final product.
@@ -83,6 +84,7 @@
 					<p>I want to be comfortable at all times.</p>
 					<p>I want to be able to multitask but still feel safe.</p>
 			  </div>
+			</div>
 			</div>
 
 			<div class="process-title">Competitive Analysis</div>
