--- a/newstagram.html
+++ b/newstagram.html
@@ -32,13 +32,13 @@
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
-	  	<div class="page-title">NEWSTAGRAM</div>
-	  	<div id="newstagram" class="margin-medium">
+	  	<div class="page-title">Newstagram</div>
 	  	<div class="project-info">
 	  		Spring 2018 | Social Web | <a href="https://adobe.ly/2FygOXL" target="_blank">View the Prototype</a>
 	  	</div>
-
 	  	<img src="pics/newstagram/streamspurple.jpg" class="big-pic">
+
+	  	<div id="newstagram" class="margin-medium">
 
 	  	<div class="content">
 			<div class="context-summary">
@@ -47,7 +47,7 @@
 			<p>Instagram is intended to connect individuals, but more often that not, it is used to curate highly edited, illusory versions of themselves. People are not at fault for this. Rather, the platforms that enable and even promote this behavior are to blame.</p>
 			<p>
 			We specifically focused on redesigning Instagram to promote an authentic user experience. By doing so, we hope to create more open spaces, conducive to deeper connections, and more meaningful presentations of one’s self.
-			</p>
+			</p> 
 			</div>
 			
 			<div class="context-specifics">
@@ -67,7 +67,7 @@
 			<img class="pics-3" src="pics/newstagram/explore3.png">
 		</div>
 
-	  	<div class="section-title">PROCESS</div>
+	  	<div class="process-title">Process</div>
 	  	<div class="panel">The process we laid out for this 6-week project is as follows: research, interviews, ideation, wireframing, user testing, and prototyping. View the <a href="pics/newstagram/report.pdf">final report here</a>!</div>
 
 		<div class="process-title">Research</div>
@@ -137,11 +137,11 @@
 
 
 		  	<a href="chutzpow.html" class="next-project" style="background-color: #662C92; float: right"> 
-		  		CHUTZ-POW >
+		  		CHUTZ-POW! >
 		  	</a>
 
-		  	<a href="atlantis.html" class="next-project" style="background-color: #662C92; float: left"> 
-		  		< ATLANTIS HUB
+		  	<a href="l&d.html" class="next-project" style="background-color: #662C92; float: left"> 
+		  		< L&D PORTAL
 		  	</a>
 	  	</div>
 
