--- a/upark.html
+++ b/upark.html
@@ -32,11 +32,12 @@
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
-	<div id="upark" class="margin-small">
-	  	<div class="page-title">UPARK</div>
+	
+	  	<div class="page-title">UPark</div>
 	  	<div class="project-info">Fall 2017 | Interaction Design Overview | <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/">Prototype</a></div>
 	  	
 	  	<img src="pics/upark/bigpic.jpg" class="big-pic">
+	<div id="upark" class="margin-medium">
 	  	
 	  	<div class="content">
 			<div class="context-summary">
@@ -74,7 +75,6 @@
 			<img class="pics-2" src="pics/upark/cal.jpg" style="margin-right: 17%">
 		</div>	
 
-	  	<div class="section-title">PROCESS</div>
 	  	<div class="process-overview">
 
 			<div class="process-title">Personas</div>
@@ -125,7 +125,7 @@
 			<div class="process-title">Storyboard</div>
 			<div class="panel">
 			  <p>Based on several “how might we” statements, the team created several storyboards depicting potential early features of the platform. The storyboard below illustrates a scenario in which both renters and lenders are satisfied by the security and ease of use of the app.</p>
-			  <img style="width: 100%" src="pics/upark/storyboard.png">
+			  <img style="width: 100%; box-shadow: 1px 1px 10px #BABABA;" src="pics/upark/storyboard.png" >
 			  <div class="caption-grid" style="margin-left: 10%">
 			  	"Plenty of driveways sit vacant while individuals who need a parking spot waste time looking for street parking"
 			  </div>
