--- a/zensors.html
+++ b/zensors.html
@@ -32,10 +32,10 @@
     <div id="nav"></div>
 
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
-  	<div class="page-title">ZENSORS</div>
+  	<div class="page-title">Zensors</div>
   	<div class="project-info">Spring 2018 | HCI Undergraduate Research | <a href="https://www.zensors.com/">Website</a></div>
-  	<div id="zensors" class="margin-small">
-  		<img src="pics/zensors/zensorsgray.jpg" class="big-pic">
+    <img src="pics/zensors/zensorsgray.jpg" class="big-pic">
+  	<div id="zensors" class="margin-medium">
 	  	<div class="content">
 			<div class="context-summary">
 				<div class="context-title">Context</div>
@@ -62,9 +62,9 @@
 					</div>
 			</div>
 
-	  	<div class="section-title">PROCESS</div>
 	  	<div class="process-overview">
 
+      <div class="last">
       <div class="process-title">User Stories</div>
       <div class="panel caption-large">
         As a first step, I created user stories. 
@@ -101,6 +101,7 @@
           <p>Quickly communicate with workers on ambiguous questions.</p>
           <p>Track how much money I spent.</p>
         </div>
+      </div>
       </div>
 
       <div class="process-title">Personas</div>
