fixed about page and added detail to upark

--- a/upark.html
+++ b/upark.html
@@ -44,7 +44,7 @@
 				<div class="context-title">Context</div>
 				This is a parking space sharing app that I worked on in Interaction Design Overview (IxDO), a core class of the HCI minor. IxDO is a studio course that offers a broad overview of communication and interaction design, through which students learn design methodologies such as brainstorming, sketching, storyboarding, wire framing, and prototyping.
 				<p>
-				Homeowners and landlords want to securely utilize their vacant parking spaces, and students, commuters, and tourists want a convenient way to find affordable parking spaces near their schools or workplaces.</p>
+				We were handed off research and tasked with translating those insights into a mobile prototype. From the research, we found that homeowners and landlords want to securely utilize their vacant parking spaces, and students, commuters, and tourists want a convenient way to find affordable parking spaces near their schools or workplaces.</p>
 				<p>
 				The solution our group implemented created value in the following areas:
 				<li>Security – Instills a sense of safety in users of the system through review system.</li>
