--- a/nav.html
+++ b/nav.html
@@ -3,7 +3,7 @@
 	<div id="nav-items">   
 		<a class="nav-item" id="home-nav-item" onclick="toggleNav()" href="index.html">PROJECTS</a>
 		<a class="nav-item" href="about.html" onclick="toggleNav()">ABOUT</a>
-		<a class="nav-item" href="pics/resume.pdf" onclick="toggleNav()">RESUME</a>
+		<a class="nav-item" href="resume.pdf" onclick="toggleNav()">RESUME</a>
 	</div>
 	<div id="hamburger" class="fa fa-bars" onclick="toggleNav()"></div>
 </div>
