updated next btn

--- a/atlantis.html
+++ b/atlantis.html
@@ -147,11 +147,13 @@
 			  </div>
 			</div>
 		  	<a href="l&d.html" class="next-project" style="background-color: #FEE469; float: right; color: black"> 
-		  		L&D PORTAL >
+		  		L&D PORTAL
+		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
 		  	<a href="miles.html" class="next-project" style="background-color: #FEE469; float: left; color: black"> 
-		  		< MILES
+		  		<i class="fa fa-caret-left"></i>
+		  		MILES
 		  	</a>
 	  	</div>
 	</div>
