--- a/chutzpow.html
+++ b/chutzpow.html
@@ -166,11 +166,13 @@
 			</div>
 
 		  	<a href="zensors.html" class="next-project" style="background-color: #18A398; float: right"> 
-		  		ZENSORS >
+		  		ZENSORS
+		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
 		  	<a href="newstagram.html" class="next-project" onclick="openPage('newstagram.html')" style="background-color: #18A398; float: left"> 
-		  		< NEWSTAGRAM
+		  		<i class="fa fa-caret-left"></i>
+		  		NEWSTAGRAM
 		  	</a>
 	  	</div>
 
