--- a/l&d.html
+++ b/l&d.html
@@ -261,11 +261,13 @@
 		</div>
 
 		  	<a href="newstagram.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		NEWSTAGRAM >
+		  		NEWSTAGRAM
+		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
 		  	<a href="atlantis.html" class="next-project" style="background-color: #49ce5c; float: left"> 
-		  		< ATLANTIS HUB
+		  		<i class="fa fa-caret-left"></i>
+		  		ATLANTIS HUB
 		  	</a>
 	  	</div>
   	</div>
