--- a/miles.html
+++ b/miles.html
@@ -199,11 +199,13 @@
 				</p>
 			</div>
 		  	<a href="atlantis.html" class="next-project" style="background-color: #2E8FEA; float: right"> 
-		  		ATLANTIS >
+		  		ATLANTIS
+		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
 		  	<a href="upark.html" class="next-project" style="background-color: #2E8FEA; float: left"> 
-		  		< UPARK
+		  		<i class="fa fa-caret-left"></i>
+		  		UPARK
 		  	</a>
 	  	</div>
 	  	</div>
