--- a/newstagram.html
+++ b/newstagram.html
@@ -48,6 +48,7 @@
 			<p>
 			We specifically focused on redesigning Instagram to promote an authentic user experience. By doing so, we hope to create more open spaces, conducive to deeper connections, and more meaningful presentations of one’s self.
 			</p> 
+			Read the full report <a href="pics/newstagram/report.pdf">here</a>.
 			</div>
 			
 			<div class="context-specifics">
@@ -137,11 +138,13 @@
 
 
 		  	<a href="chutzpow.html" class="next-project" style="background-color: #662C92; float: right"> 
-		  		CHUTZ-POW! >
+		  		CHUTZ-POW!
+		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
 		  	<a href="l&d.html" class="next-project" style="background-color: #662C92; float: left"> 
-		  		< L&D PORTAL
+		  		<i class="fa fa-caret-left"></i>
+		  		L&D PORTAL
 		  	</a>
 	  	</div>
 
