--- a/upark.html
+++ b/upark.html
@@ -155,11 +155,14 @@
 			  <img class="product-pic-medium" src="pics/upark/style.jpg" style="margin-right: 5%">
 			</div>
 		  	<a href="miles.html" class="next-project" style="background-color: #EE6B4D; float: right"> 
-		  		MILES >
+		  		MILES
+		  		<i class="fa fa-caret-right"></i>
 		  	</a>
 
 		  	<a href="zensors.html" class="next-project" style="background-color: #EE6B4D; float: left"> 
-		  		< ZENSORS
+		  	
+		  		<i class="fa fa-caret-left"></i>
+		  		ZENSORS
 		  	</a>
 	  	</div>
 	  	<div id="footer"></div>
