--- a/zensors.html
+++ b/zensors.html
@@ -227,11 +227,13 @@
 		</div>
 
 			<a href="upark.html" class="next-project" style="background-color: #33312E; float: right"> 
-		  		UPARK >
+		  		UPARK
+          <i class="fa fa-caret-right"></i>
 		  	</a>
 
 		  	<a href="chutzpow.html" class="next-project" style="background-color: #33312E; float: left"> 
-		  		< CHUTZ-POW
+		  		<i class="fa fa-caret-left"></i> 
+          CHUTZ-POW
 		  	</a>
 	  	</div>
 	</div>
