changed user to usability

--- a/newstagram.html
+++ b/newstagram.html
@@ -56,7 +56,7 @@
 					<div class="context-description">
 					I worked in an interdisciplinary team of three: myself, another IS/HCI major, and a Business major.</div>
 				<div class="context-subtitle">Skills</div> 
-					<div class="context-description">Interviewing, User testing, Conducting Research, Wireframing, Prototyping, Presenting</div>
+					<div class="context-description">Interviewing, Usability testing, Conducting Research, Wireframing, Prototyping, Presenting</div>
 				<div class="context-subtitle">Tools</div> 
 					<div class="context-description">Adobe XD, Google Slides</div>
 			</div>
@@ -69,7 +69,7 @@
 		</div>
 
 	  	<div class="process-title">Process</div>
-	  	<div class="panel">The process we laid out for this 6-week project is as follows: research, interviews, ideation, wireframing, user testing, and prototyping. View the <a href="pics/newstagram/report.pdf">final report here</a>!</div>
+	  	<div class="panel">The process we laid out for this 6-week project is as follows: research, interviews, ideation, wireframing, usability testing, and prototyping. View the <a href="pics/newstagram/report.pdf">final report here</a>!</div>
 
 		<div class="process-title">Research</div>
 		<div class="panel">
@@ -117,7 +117,7 @@
 		  	</p>
 		  	</div>
 
-		<div class="process-title">User Testing</div>
+		<div class="process-title">Usability Testing</div>
 		<div class="panel">
 			We speed dated our initial wireframes with five users to test for intuitiveness, whether or not they would enjoy using the app or prefer the changes compared to how Instagram is now, and whether or not we achieved our goal of creating a comfortable, accepting environment for users. We also collected suggestions users might have for improvement.
 		  	<div id="secondary-pics">
