updated home description

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div id="home-text-description">
             <p>I am an incoming senior at Carnegie Mellon University studying <a href="https://www.cmu.edu/information-systems/">Information Systems</a> and <a href="https://hcii.cmu.edu/">Human-Computer Interaction</a>. My interdisciplinary education focuses on how people, process, and technology intertwine, and how to leverage insights gathered from each piece of that puzzle to build better user experiences.</p>
             <p>
-            In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. I’m currently interning at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> this summer as a UX Designer in Arlington, VA.
+            In my free time, I like to run half marathons, cook, and fantasize about owning a Corgi. I just finished interning at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> this summer as a UX Designer in Arlington, VA. Check out what I worked on <a href="l&d.html">here</a>!
             </p>
           </div>
         </div>
