--- a/l&d.html
+++ b/l&d.html
@@ -43,7 +43,7 @@
 	  	<div class="content">
 			<div class="context-summary">
 			<div class="context-title">Context</div>
-				During my summer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Design Intern, I redesigning the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.
+				During my summer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Design Intern, I redesigned the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.
 				<p>
 				I had full ownership over this project: I created my own project plan and timeline, I decided what methods and tools I wanted to use and learn, and I headed all the group efforts that went into the project.
 				</p>
